[B]Version 2.0.0 - 2012-01-01[/B]
- Initial version for Eden
- Improved error handling with option for the user to submit exceptions/bugs

[B]Version 1.1.2[/B]
- Removed depdency on script.module.danishaddons
- Added teaser clips on below shows listing
- Added setting to hide teaser clips

[B]Version 1.1.1[/B]
- Prepare for official repository

[B]Version 1.1.0[/B]
- Rewrote to use json feeds from videovideo.dk

[B]Version 1.0.2[/B]
- Use danishaddons module version 1.1.0

[B]Version 1.0.1[/B]
- Switched to MP4 video clips instead of WebM to get VDPAU acceleration on linux

[B]Version 1.0.0[/B]
- Initial version