@@ -3,6 +3,7 @@
   <component name="ProjectModuleManager">
     <modules>
       <module fileurl="file://$PROJECT_DIR$/.idea/plugin.video.videovideo.dk.iml" filepath="$PROJECT_DIR$/.idea/plugin.video.videovideo.dk.iml" />
+      <module fileurl="file://$PROJECT_DIR$/../script.module.buggalo/.idea/script.module.buggalo.iml" filepath="$PROJECT_DIR$/../script.module.buggalo/.idea/script.module.buggalo.iml" />
       <module fileurl="file://$PROJECT_DIR$/../xbmcstubs/.idea/xbmcstubs.iml" filepath="$PROJECT_DIR$/../xbmcstubs/.idea/xbmcstubs.iml" />
     </modules>
   </component>
