@@ -8,6 +8,7 @@
     <orderEntry type="jdk" jdkName="Python 2.7.2+ (/usr/bin/python2.7)" jdkType="Python SDK" />
     <orderEntry type="sourceFolder" forTests="false" />
     <orderEntry type="module" module-name="xbmcstubs" />
+    <orderEntry type="module" module-name="script.module.buggalo" />
   </component>
 </module>
 
