@@ -2,6 +2,8 @@
 <project version="4">
   <component name="VcsDirectoryMappings">
     <mapping directory="$PROJECT_DIR$" vcs="Git" />
+    <mapping directory="$PROJECT_DIR$/../script.module.buggalo" vcs="Git" />
+    <mapping directory="$PROJECT_DIR$/../xbmcstubs" vcs="Git" />
   </component>
 </project>
 
