@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="plugin.video.videovideo.dk" version="2.0.0" name="videovideo.dk HD" provider-name="twinther [tommy@winther.nu]">
+<addon id="plugin.video.videovideo.dk" version="2.0.1" name="videovideo.dk HD" provider-name="twinther [tommy@winther.nu]">
     <requires>
         <import addon="xbmc.python" version="2.0"/>
         <import addon="script.module.simplejson" version="2.0.10"/>
@@ -14,5 +14,6 @@
         <description lang="da">videovideo.dk er overordnet videoplatform for alle sites tilhørende newz Media ApS, heriblandt filmz.dk og railgun.newz.dk[CR][CR]Har du kommentarer, ris eller ros til denne addon er du velkommen til at deltage i debatten på min blog på http://tommy.winther.nu</description>
         <license>GPL 2.0</license>
         <platform>all</platform>
+        <language>da</language>
     </extension>
 </addon>
