@@ -1,3 +1,6 @@
+[B]Version 2.0.1[/B]
+- Added language tag to addon.xml
+
 [B]Version 2.0.0 - 2012-01-01[/B]
 - Initial version for Eden
 - Improved error handling with option for the user to submit exceptions/bugs
